--- a/package.json
+++ b/package.json
@@ -35,6 +35,14 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.14.1"
+    "husky": "^4.2.5",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
