--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "highlight.js": "^10.1.2",
     "react": "^16.13.1",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-dom": "^16.13.1",
+    "react-lowlight": "^2.0.0",
     "react-markdown": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
